[package]
name = "ds-rs"
version = "0.1.0"
authors = ["Will Schroeder"]
edition = "2021"
description = "A command to search and display directory structures."
readme = "README.md"
repository = "https://github.com/mysteriouslyseeing/directory-search-rs"
license = "MIT OR Apache-2.0"
keywords = ["cli", "command", "directory", "search", "tree"]
categories = ["filesystem", "visualization", "command-line-utilities"]

[dependencies]
clap = { version = "4.3.0", features = ["derive", "cargo"] }
lazy_static = "1.4.0"
regex = "1.8.3"

[[bin]]
name = "ds"
path = "src/main.rs"